--- a/Project/RPS/index.html
+++ b/Project/RPS/index.html
@@ -27,6 +27,7 @@
     <button onclick="handleChoice('paper')">Paper</button>
     <button onclick="handleChoice('scissors')">Scissors</button>
   </div>
+  <div id="computer-choice"></div> <!-- Computer's choice display -->
   <div id="result"></div>
   <div id="score"></div>
 
